fixed the column at porfolio || text-align: start

--- a/css/index.css
+++ b/css/index.css
@@ -286,7 +286,7 @@ header .about-title {
 
 .portfolio-column p {
   position: relative;
-  text-align: center;
+  text-align: start;
   font-size: 1.4rem;
   font-weight: 800;
   color: #000000;
